--- a/cyberware/src/main/webapp/css/signin.css
+++ b/cyberware/src/main/webapp/css/signin.css
@@ -11,7 +11,6 @@ p {
 }
 
 form {
-    width: 310px;
     margin: auto;
     text-align: left;
 }
@@ -21,12 +20,24 @@ form {
     padding: 0 20px 20px 20px;
 }
 
-.littleDivInput {
+.littleDivInput, .largeDivInput {
     float: left;
     padding: 10px;
     border: 2px;
 }
 
+.littleDivInput {
+    width: 50%;
+}
+
+.largeDivInput {
+    width: 100%;
+}
+
 .realInput {
     width: 250px;
+}
+
+.realLargeInput {
+    width: 100%;
 }
