--- a/cyberware/src/main/webapp/css/category.css
+++ b/cyberware/src/main/webapp/css/category.css
@@ -6,6 +6,21 @@ h1 {
     padding: 20px 20px 0 20px;
 }
 
-p {
-    padding-bottom: 30px;
+.col-md-4:not(:nth-child(1), :nth-child(2), :nth-child(3)) {
+    margin-top: 30px
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.imgImage {
+    width: 80px;
+    height: 80px;
+}
+
+.ml-2 {
+    padding-left: 15px;
+    overflow-wrap: break-word;
 }
