--- a/cyberware/src/main/webapp/css/category.css
+++ b/cyberware/src/main/webapp/css/category.css
@@ -6,8 +6,8 @@ h1 {
     padding: 20px 20px 0 20px;
 }
 
-.col-md-4:not(:nth-child(1), :nth-child(2), :nth-child(3)) {
-    margin-top: 30px
+.aImage {
+    margin-bottom: 24px
 }
 
 a {
