--- a/cyberware/src/main/webapp/css/catalog.css
+++ b/cyberware/src/main/webapp/css/catalog.css
@@ -15,21 +15,33 @@ h1, p {
 }
 
 .aCatalog {
+    padding: 0;
     margin: 0 12px 24px 12px;
     text-decoration: none;
     color: black;
 }
 
-.cardCatalog {
+.cardCatalog, .aCatalog {
     width: 218px;
-    height: 310px;
+    height: 270px;
 }
 
 .imgCatalog {
     height: 216px;
     width: 216px;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.125);
 }
 
 .divCatalog {
-    padding: 10px;
+    padding: 5px;
+}
+
+.divAllCatalog {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h6 {
+    margin-bottom: 0;
 }
