--- a/cyberware/src/main/webapp/css/category.css
+++ b/cyberware/src/main/webapp/css/category.css
@@ -22,6 +22,10 @@ p {
     width: 416px;
 }
 
+.cardCategory {
+    background-color: yellow;
+}
+
 .imgCategory {
     width: 94px;
     height: 94px;
