--- a/cyberware/src/main/webapp/css/template/template.css
+++ b/cyberware/src/main/webapp/css/template/template.css
@@ -1,3 +1,37 @@
+@font-face {
+    font-family: BlenderProBook;
+    src: url("../font/Blender-Pro-Book.otf") format("opentype");
+}
+
+@font-face {
+    font-family: BlenderProBold;
+    src: url("../font/Blender-Pro-Bold.otf") format("opentype");
+}
+
+div {
+    font-family: BlenderProBook;
+}
+
+.divNavBar, .divContainer {
+    height: 74px;
+}
+
+.divNavBar {
+    padding: 0;
+    font-size: larger;
+}
+
+.imgCyberware {
+    height: 48px;
+    width: 227px;
+}
+
+.imgLanguage {
+    height: 40px;
+    width: 50px;
+    padding-right: 10px;
+}
+
 footer {
     position: absolute;
     bottom: 0;
@@ -5,7 +39,7 @@ footer {
 }
 
 #content-wrap {
-    padding-bottom: 5rem;
+    padding-bottom: 4.5rem;
 }
 
 #page-container {
