--- a/cyberware/src/main/webapp/css/cart.css
+++ b/cyberware/src/main/webapp/css/cart.css
@@ -9,3 +9,50 @@ h1 {
 p {
     padding-bottom: 30px;
 }
+
+.divButton {
+    margin-top: 30px;
+}
+
+.table {
+    width: 75%;
+    margin: auto;
+}
+
+h1, p, th, td:not(.tdDescription) {
+    text-align: center;
+}
+
+th, td {
+    vertical-align: middle;
+}
+
+thead {
+    background-color: black;
+    color: #FFFF00;
+    border-color: black;
+}
+
+tbody {
+    background-color: #FFFF00;
+    color: black;
+    border-color: black;
+}
+
+.tdImage, img {
+    height:75px;
+    width:75px;
+}
+
+.tdName {
+    width:180px;
+    font-weight: bold;
+}
+
+.tdPrice, .divPrice {
+    width: 70px;
+}
+
+.tdQuantity {
+    width: 60px;
+}
